.k8s/apps/qui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: qui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: qui
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: 8aecb05eba69032d86f2caae8356120997d9e116
    kubenix/module-instance: qui
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: qui
  namespace: apps
spec:
  replicas: 0
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: qui
      app.kubernetes.io/name: qui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: qui
        app.kubernetes.io/name: qui
    spec:
      automountServiceAccountToken: true
      containers:
        - image: ghcr.io/autobrr/qui:v1.15.0@sha256:5d9afcb8fead8607e2b63ad7cb4bf6001fa2864fb36f499ae5c4f9a863a784b9
          imagePullPolicy: IfNotPresent
          name: main
          ports:
            - containerPort: 7476
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /downloads
              name: downloads
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: cephfs-shared-storage-downloads
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.136
    lbipam.cilium.io/sharing-key: qui
  labels:
    app.kubernetes.io/instance: qui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: qui
    app.kubernetes.io/service: qui
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: 8aecb05eba69032d86f2caae8356120997d9e116
    kubenix/module-instance: qui
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: qui
  namespace: apps
spec:
  ports:
    - name: http
      port: 7476
      protocol: TCP
      targetPort: 7476
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: qui
    app.kubernetes.io/name: qui
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: qui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: qui
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: 8aecb05eba69032d86f2caae8356120997d9e116
    kubenix/module-instance: qui
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: qui
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: qui.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: qui
                port:
                  number: 7476
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - qui.josevictor.me
      secretName: wildcard-tls
